--- a/index.html
+++ b/index.html
@@ -370,12 +370,11 @@
 				</div>
 			</div>
 		</footer>
-		
-		<div class="backdrop" data-modal>
+		<div class="backdrop is-hidden" data-modal>
 			<div class="modal">
 			  <button class="modal-btn" type="button" data-modal-close>
 				<svg class="modal-icon" width="20" height="20">
-				  <use href="./images/icons.svg#close"></use>
+				  <use href="./images/icons/symbol-defs1.svg#icon-Frame-3"></use>
 				</svg>
 			  </button>
 			  <strong class="modal-title">Leave your contacts and we will call you back</strong>
@@ -385,7 +384,7 @@
 				<div class="modal-form-group">
 				  <input class="modal-form-field" type="text" id="user_sign" required minlength="2" />
 				  <svg class="modal-form-icon" width="25" height="25">
-					<use href="./images/icons.svg#icon-user"></use>
+					<use href="./images/icons/symbol-defs1.svg#icon-person-black-18dp-1"></use>
 				  </svg>
 				</div>
 				<!-- Phone field -->
@@ -393,7 +392,7 @@
 				<div class="modal-form-group">
 				  <input class="modal-form-field" type="tel" id="user_telephone" required />
 				  <svg class="modal-form-icon" width="25" height="25">
-					<use href="./images/icons.svg#icon-phone"></use>
+					<use href="./images/icons/symbol-defs1.svg#icon-phone-black-18dp-1"></use>
 				  </svg>
 				</div>
 				<!-- Email field -->
@@ -401,7 +400,7 @@
 				<div class="modal-form-group">
 				  <input class="modal-form-field" type="email" id="user_email" required />
 				  <svg class="modal-form-icon" width="25" height="25">
-					<use href="./images/icons.svg#icon-mail"></use>
+					<use href="./images/icons/symbol-defs1.svg#icon-email-black-18dp-1"></use>
 				  </svg>
 				</div>
 				<!-- Comment field -->
@@ -411,7 +410,7 @@
 				  name="user_comment"
 				  id="user_comment"
 				  rows="6"
-				  placeholder="Type your comment..."
+				  placeholder="Text input"
 				></textarea>
 				<!-- Agreement field -->
 				<label class="modal-form-agreement" for="user_agreement">
@@ -424,7 +423,7 @@
 					data-modal-checkbox
 				  />
 				  <svg class="custom-checkbox" width="18" height="18">
-					<use class="custom-checkbox-frame" href="./images/icons.svg#icon-checkbox"></use>
+					<use class="custom-checkbox-frame" href="./images/icons/symbol-defs1.svg#icon-Vector"></use>
 					<use class="custom-checkbox-check" href="./images/icons.svg#icon-check"></use>
 				  </svg>
 				  <span class="modal-form-desc">
@@ -434,12 +433,15 @@
 				</label>
 	  
 				<button class="modal-form-btn btn" type="submit" disabled data-modal-submit
-				  >Submit</button
+				  >Send</button
 				>
 			  </form>
 			</div>
 		  </div>
 	  
+		  <!-- Add Input mask https://github.com/RobinHerbots/Inputmask -->
+		  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"></script>
+		  <script src="https://cdn.jsdelivr.net/npm/inputmask@5.0.7/dist/jquery.inputmask.min.js"></script>
 		  <script src="./js/header.js"></script>
 		  <script src="./js/modal.js"></script>
 	</body>
