--- a/index.html
+++ b/index.html
@@ -432,9 +432,7 @@
 				  </span>
 				</label>
 	  
-				<button class="modal-form-btn btn" type="submit" disabled data-modal-submit
-				  >Send</button
-				>
+				<button class="modal-form-btn btn" type="submit" disabled data-modal-submit>Send</button>
 			  </form>
 			</div>
 		  </div>
