--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 			<div class="modal">
 			  <button class="modal-btn" type="button" data-modal-close>
 				<svg class="modal-icon" width="20" height="20">
-				  <use href="./images/icons/symbol-defss.svg"></use>
+				  <use href="./images/icons/symbol-defss.svg#icon-close"></use>
 				</svg>
 			  </button>
 			  <strong class="modal-title">Leave your contacts and we will call you back</strong>
