--- a/index.html
+++ b/index.html
@@ -370,6 +370,8 @@
 				</div>
 			</div>
 		</footer>
+
+
 		<div class="backdrop is-hidden" data-modal>
 			<div class="modal">
 			  <button class="modal-btn" type="button" data-modal-close>
@@ -422,10 +424,11 @@
 					required
 					data-modal-checkbox
 				  />
-				  <svg class="custom-checkbox" width="18" height="18">
-					<use class="custom-checkbox-frame" href="./images/icons/symbol-defs1.svg#icon-Vector"></use>
-					<use class="custom-checkbox-check" href="./images/icons.svg#icon-check"></use>
-				  </svg>
+				    <span class="modal-checkbox-hid">
+					<svg class="modal-checkbox-icon" width="10" height="8">
+						<use href="./images/icons/symbol-defs1.svg#icon-Vector"></use>
+					</svg>
+					</span>
 				  <span class="modal-form-desc">
 					I accept the terms and conditions of the
 					<a class="modal-form-link" href="" target="_blank">Privacy Policy</a>
