--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 		</footer>
 
 
-		<div class="backdrop is-hidden" data-modal>
+		<div class="backdrop is-hidden">
 			<div class="modal">
 			  <button class="modal-btn" type="button" data-modal-close>
 				<svg class="modal-icon" width="24" height="24">
