--- a/index.html
+++ b/index.html
@@ -371,75 +371,70 @@
 			</div>
 		</footer>
 
-
-		<div class="backdrop is-hidden" data-modal>
+		<div data-modal class="backdrop-modal is-hidden">
 			<div class="modal">
-			  <button class="modal-btn" type="button" data-modal-close>
-				<svg class="modal-icon" width="24" height="24">
-				  <use href="./images/icons/symbol-defss.svg#icon-close"></use>
-				</svg>
-			  </button>
-			  <strong class="modal-title">Leave your contacts and we will call you back</strong>
-			  <form class="modal-form" name="modal_form">
-				<!-- Name field -->
-				<label class="modal-form-label" for="user_sign">Name</label>
-				<div class="modal-form-group">
-				  <input class="modal-form-field" type="text" id="user_sign" required pattern="[a-zA-Zа-яА-Я]+"
-				  minlength="2" />
-				  <svg class="modal-form-icon" width="25" height="25">
-					<use href="./images/icons/symbol-defs1.svg#icon-person-black-18dp-1"></use>
-				  </svg>
-				</div>
-				<!-- Phone field -->
-				<label class="modal-form-label" for="user_telephone">Phone</label>
-				<div class="modal-form-group">
-				  <input class="modal-form-field" type="tel" id="user_telephone" required pattern="[0-9]{3}[0-9]{3}[0-9]{2}[0-9]{2}" title="xxx-xxx-xx-xx"/>
-				  <svg class="modal-form-icon" width="25" height="25">
-					<use href="./images/icons/symbol-defs1.svg#icon-phone-black-18dp-1"></use>
-				  </svg>
-				</div>
-				<!-- Email field -->
-				<label class="modal-form-label" for="user_email">Email</label>
-				<div class="modal-form-group">
-				  <input class="modal-form-field" type="email" id="user_email" required />
-				  <svg class="modal-form-icon" width="25" height="25">
-					<use href="./images/icons/symbol-defs1.svg#icon-email-black-18dp-1"></use>
-				  </svg>
-				</div>
-				<!-- Comment field -->
-				<label class="modal-form-label" for="user_comment">Comment</label>
-				<textarea
-				  class="modal-form-comment"
-				  name="user_comment"
-				  id="user_comment"
-				  rows="6"
-				  placeholder="Text input"
-				></textarea>
-				<!-- Agreement field -->
-				<label class="modal-form-agreement" for="user_agreement">
-				  <input
-					class="modal-form-checkbox visually-hidden"
-					type="checkbox"
-					name="user_agreement"
-					id="user_agreement"
-					required
-					data-modal-checkbox
-				  />
-				  <span class="modal-checkbox-hid">
-					<svg class="modal-checkbox-icon" width="10" height="8">
-						<use href="./images/icons.svg#icon-Vector"></use>
+	
+				<button data-modal-close class="modal-btn" type="button">
+					<svg class="modal-icon" width="8" height="8">
+						<use href="./images/icons.svg#close"></use>
 					</svg>
-				  </span>
-				  <span class="modal-form-desc">
-					I accept the terms and conditions of the
-					<a class="modal-form-link" href="" target="_blank">Privacy Policy</a>
-				  </span>
-				</label>
-	  
-				<button class="modal-form-btn btn" type="submit" disabled data-modal-submit>Send</button>
-			  </form>
+				</button>
+	
+				<p class="modal-title">Leave your contacts and we will call you back</p>
+	
+				<form class="form-modal">
+					<label class="form-modal-input">
+						<span class="form-input modal-name">Name</span>
+						<span class="form-input-wrap">
+							<input class="input-modal" type="text" name="user_name" required pattern="[a-zA-Zа-яА-Я]+"
+								minlength="2">
+							<svg class="form-icon" width="18" height="18">
+								<use href="./images/icons.svg#icon-person"></use>
+							</svg>
+						</span>
+					</label>
+	
+					<label class="form-modal-input">
+						<span class="form-input">Phone</span>
+						<span class="form-input-wrap">
+							<input class="input-modal" type="tel" name="user_phone" required
+								pattern="[0-9]{3}[0-9]{3}[0-9]{2}[0-9]{2}" title="xxx-xxx-xx-xx">
+							<svg class="form-icon" width="18" height="24">
+								<use href="./images/icons.svg#icon-phone"></use>
+							</svg>
+						</span>
+					</label>
+	
+					<label class="form-modal-input">
+						<span class="form-input">Email</span>
+						<span class="form-input-wrap">
+							<input class="input-modal" type="email" name="user_email" required>
+							<svg class="form-icon" width="18" height="24">
+								<use href="./images/icons.svg#icon-email"></use>
+							</svg>
+						</span>
+					</label>
+	
+					<label class="form-modal-input">
+						<span class="form-input-message">Comment</span>
+						<textarea class="form-text" name="user_message" placeholder="Text input"></textarea>
+					</label>
+	
+					<label class="modal-check" for="user_policy">
+						<input class="modal-form-checkbox hidden-vis" type="checkbox" name="user_policy" id="user_policy">
+						<span class="modal-checkbox-hid">
+							<svg class="modal-checkbox-icon" width="10" height="8">
+								<use href="./images/icons.svg#icon-Vector"></use>
+							</svg>
+						</span>
+						I accept the terms and conditions of the&nbsp;
+						<a class="policy-link" href="#">Privacy Policy</a>
+					</label>
+	
+					<button class="send-btn" type="submit">Send</button>
+				</form>
 			</div>
-		  </div>
+		</div>
 	  
 		  <!-- Add Input mask https://github.com/RobinHerbots/Inputmask -->
 		  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"></script>
