--- a/index.html
+++ b/index.html
@@ -421,10 +421,10 @@
 					</label>
 	
 					<label class="modal-check" for="user_policy">
-						<input class="modal-form-checkbox hidden-vis" type="checkbox" name="user_policy" id="user_policy">
+						<input class="modal-form-checkbox hidden-vis" type="checkbox"  id="user_policy">
 						<span class="modal-checkbox-hid">
 							<svg class="modal-checkbox-icon" width="10" height="8">
-								<use href="./images/icons.svg#icon-Vector"></use>
+								<use href="./images/icons/symbol-defss.svg"></use>
 							</svg>
 						</span>
 						I accept the terms and conditions of the&nbsp;
@@ -435,10 +435,7 @@
 				</form>
 			</div>
 		</div>
-	  
-		  <!-- Add Input mask https://github.com/RobinHerbots/Inputmask -->
-		  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"></script>
-		  <script src="https://cdn.jsdelivr.net/npm/inputmask@5.0.7/dist/jquery.inputmask.min.js"></script>
+	    
 		  <script src="./js/header.js"></script>
 		  <script src="./js/modal.js"></script>
 	</body>
