--- a/index.html
+++ b/index.html
@@ -369,6 +369,21 @@
 					</ul>
 				</div>
 			</div>
+			<div class="subscribe">
+                <p class="soc-text">Subscribe</p>
+                <form class="subscribe-input">
+                    <label class="form-email">
+                        <input class="form-email-input" type="email" name="Subscribe" placeholder="E-mail" required>
+                    </label>
+
+                    <button class="subscribe-btn" type="submit">Subscribe
+                        <svg class="svg-tg" width="24px" height="24px">
+                            <use href="./images/icons.svg#icon-tg"></use>
+                        </svg>
+                    </button>
+                </form>
+
+            </div>
 		</footer>
 
 		<div data-modal class="backdrop-modal is-hidden">
