--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 	
 				<button data-modal-close class="modal-btn" type="button">
 					<svg class="modal-icon" width="8" height="8">
-						<use href="./images/icons.svg#close"></use>
+						<use href="./images/icons/symbol-defs1.svg#icon-Frame-3"></use>
 					</svg>
 				</button>
 	
@@ -405,7 +405,7 @@
 							<input class="input-modal" type="text" name="user_name" required pattern="[a-zA-Zа-яА-Я]+"
 								minlength="2">
 							<svg class="form-icon" width="18" height="18">
-								<use href="./images/icons.svg#icon-person"></use>
+								<use href="./images/icons/symbol-defs1.svg#icon-person-black-18dp-1"></use>
 							</svg>
 						</span>
 					</label>
@@ -416,7 +416,7 @@
 							<input class="input-modal" type="tel" name="user_phone" required
 								pattern="[0-9]{3}[0-9]{3}[0-9]{2}[0-9]{2}" title="xxx-xxx-xx-xx">
 							<svg class="form-icon" width="18" height="24">
-								<use href="./images/icons.svg#icon-phone"></use>
+								<use href="./images/icons/symbol-defs1.svg#icon-phone-black-18dp-1"></use>
 							</svg>
 						</span>
 					</label>
@@ -426,7 +426,7 @@
 						<span class="form-input-wrap">
 							<input class="input-modal" type="email" name="user_email" required>
 							<svg class="form-icon" width="18" height="24">
-								<use href="./images/icons.svg#icon-email"></use>
+								<use href="./images/icons/symbol-defs1.svg#icon-email-black-18dp-1"></use>
 							</svg>
 						</span>
 					</label>
@@ -440,7 +440,7 @@
 						<input class="modal-form-checkbox hidden-vis" type="checkbox"  id="user_policy">
 						<span class="modal-checkbox-hid">
 							<svg class="modal-checkbox-icon" width="10" height="8">
-								<use href="./images/icons/symbol-defss.svg"></use>
+								<use href="./images/icons/symbol-defs1.svg#icon-Vector"></use>
 							</svg>
 						</span>
 						I accept the terms and conditions of the&nbsp;
