--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 
                     <button class="subscribe-btn" type="submit">Subscribe
                         <svg class="svg-tg" width="24px" height="24px">
-                            <use href="./images/icons.svg#icon-tg"></use>
+                            <use href="./images/icons/symbol-defs1.svg#icon-Frame-3"></use>
                         </svg>
                     </button>
                 </form>
@@ -392,7 +392,7 @@
 	
 				<button data-modal-close class="modal-btn" type="button">
 					<svg class="modal-icon" width="8" height="8">
-						<use href="./images/icons/symbol-defs1.svg#icon-Frame-3"></use>
+						<use href="./images/icons/symbol-defss.svg#icon-close"></use>
 					</svg>
 				</button>
 	
