--- a/portfolio.html
+++ b/portfolio.html
@@ -241,7 +241,23 @@
 						</li>
 					</ul>
 				</div>
+				<div class="subscribe">
+					<p class="soc-text">Subscribe</p>
+					<form class="subscribe-input">
+						<label class="form-email">
+							<input class="form-email-input" type="email" name="Subscribe" placeholder="E-mail" required>
+						</label>
+	
+						<button class="subscribe-btn" type="submit">Subscribe
+							<svg class="svg-tg" width="24px" height="24px">
+								<use href="./images/icons/symbol-defs1.svg#icon-Frame-3"></use>
+							</svg>
+						</button>
+					</form>
+	
+				</div>
 			</div>
+			
 		</footer>
 	</body>
 </html>
